<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_layout"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/S"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/s1"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/C"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/c3"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/R"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/r1"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/A"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/a1"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/B"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/b3"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/BB"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/b3_2"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/L"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/l1"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

        <TextView
            android:id="@+id/E"
            style="@style/CustomTextScrabbleStyle"
            android:background="@color/color_background_scrabble"
            android:text="@string/e1"
            android:textColor="@color/color_text_scrabble"
            android:textSize="@dimen/size_text_scrabble" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/player1"
                android:textColor="@color/color_text_player"
                android:textSize="@dimen/size_text_player" />

            <TextView
                android:id="@+id/txtResult1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/color_text_result"
                android:textSize="@dimen/size_text_result" />

            <EditText
                android:id="@+id/txtNumber1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/edit_text"
                android:textColor="@color/color_text_edit" />

            <Button
                android:id="@+id/btnAdd1"
                style="@style/CustomButtonStyle"
                android:text="@string/add" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background_view" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/player2"
                android:textColor="@color/color_text_player"
                android:textSize="@dimen/size_text_player" />

            <TextView
                android:id="@+id/txtResult2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/color_text_result"
                android:textSize="@dimen/size_text_result" />

            <EditText
                android:id="@+id/txtNumber2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/edit_text"
                android:textColor="@color/color_text_edit" />

            <Button
                android:id="@+id/btnAdd2"
                style="@style/CustomButtonStyle"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/color_background_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/player3"
                android:textColor="@color/color_text_player"
                android:textSize="@dimen/size_text_player" />

            <TextView
                android:id="@+id/txtResult3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/color_text_result"
                android:textSize="@dimen/size_text_result" />

            <EditText
                android:id="@+id/txtNumber3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/edit_text"
                android:textColor="@color/color_text_edit" />

            <Button
                android:id="@+id/btnAdd3"
                style="@style/CustomButtonStyle"
                android:text="@string/add" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_background_view" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/player4"
                android:textColor="@color/color_text_player"
                android:textSize="@dimen/size_text_player" />

            <TextView
                android:id="@+id/txtResult4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/color_text_result"
                android:textSize="@dimen/size_text_result" />

            <EditText
                android:id="@+id/txtNumber4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/edit_text"
                android:textColor="@color/color_text_edit" />

            <Button
                android:id="@+id/btnAdd4"
                style="@style/CustomButtonStyle"
                android:text="@string/add" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="reset"
        android:text="@string/reset" />
</LinearLayout>




